# PasteAlignments

./: .gitignore  CMakeLists.txt  README.md  default.config
include/: alignment.h  alignment_batch.h  alignment_batch_reader.h  alignment_batch_writer.h  alignment_reader.h  alignment_writer.h  exceptions.h  helpers.h  link_alignments_parameters.h  paste_alignments.h  paste_output.h  paste_parameters.h  scoring_system.h  stats_collector.h
lib/: CMakeLists.txt
lib/ArgParseConvert/: CMakeLists.txt  README.md
lib/ArgParseConvert/docs/: index.html
lib/ArgParseConvert/docs/doxygen/: customdoxygen.css  doxyfile  doxygen_layout.xml
lib/ArgParseConvert/docs/doxygen/html/: arg__parse__convert_8h_source.html  argument__map_8h_source.html  classarg__parse__convert_1_1_argument_map-members.html  classarg__parse__convert_1_1_argument_map.html  classarg__parse__convert_1_1_parameter-members.html  classarg__parse__convert_1_1_parameter.html  classarg__parse__convert_1_1_parameter_configuration-members.html  classarg__parse__convert_1_1_parameter_configuration.html  classarg__parse__convert_1_1_parameter_map-members.html  classarg__parse__convert_1_1_parameter_map.html  classarg__parse__convert_1_1_parameter_map_old-members.html  classarg__parse__convert_1_1_parameter_map_old.html  conversion__functions_8h_source.html  dir_04f2ecc425faf0d475a3caf484e551f3.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e68e8157741866f444e17edd764ebbae.html  exceptions_8h_source.html  group___arg_parse_convert-_reference.html  help__string__format_8h_source.html  help__string__formatters_8h_source.html  index.html  menudata.js  namespacearg__parse__convert.html  namespacearg__parse__convert_1_1converters.html  namespacearg__parse__convert_1_1exceptions.html  parameter_8h_source.html  parameter__map_8h_source.html  parameter__map__old_8h_source.html  parsers_8h.html  parsers_8h_source.html  structarg__parse__convert_1_1_help_string_format-members.html  structarg__parse__convert_1_1_help_string_format.html  structarg__parse__convert_1_1_invalid_arguments-members.html  structarg__parse__convert_1_1_invalid_arguments.html  structarg__parse__convert_1_1exceptions_1_1_argument_parsing_error.html  structarg__parse__convert_1_1exceptions_1_1_base_error.html  structarg__parse__convert_1_1exceptions_1_1_help_string_error.html  structarg__parse__convert_1_1exceptions_1_1_parameter_access_error.html  structarg__parse__convert_1_1exceptions_1_1_parameter_configuration_error.html  (+2 more)
lib/ArgParseConvert/docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  (+13 more)
lib/ArgParseConvert/include/: arg_parse_convert.h  argument_map.h  conversion_functions.h  exceptions.h  help_string_formatters.h  parameter.h  parameter_map.h  parsers.h
lib/ArgParseConvert/lib/catch/include/: catch.h
lib/ArgParseConvert/src/: argument_map.cc  help_string_formatters.cc  parameter.cc  parameter_map.cc  parsers.cc
lib/ArgParseConvert/test/: CMakeLists.txt  argument_map_test.cc  help_string_formatters_test.cc  parameter_map_test.cc  parameter_test.cc  parsers_test.cc  string_conversions.h
src/: alignment.cc  alignment_batch.cc  alignment_reader.cc  alignment_writer.cc  helpers.cc  main.cc  paste_output.cc  scoring_system.cc  stats_collector.cc
test/: CMakeLists.txt  alignment_batch_reader_test.cc  alignment_batch_test.cc  alignment_batch_writer_test.cc  alignment_reader_test.cc  alignment_test.cc  helpers_test.cc  link_alignments_parameters_test.cc  paste_output_test.cc  scoring_system_test.cc  stats_collector_test.cc  string_conversions.h
test/test_data/: valid_alignment_file.tsv  valid_alignment_file_with_additional_columns.tsv
